--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="show-1 active homebutton" href="#"><i class="fa fa-home"></i>Home</a>
           </li>
           <li>
-            <a class="show-2 aboutbutton" href="#"><i class="fa fa-user"></i>About Us</a>
+            <a class="show-2 aboutbutton" href="#"><i class="fa fa-user"></i>About Me</a>
           </li>
           <li>
             <a class="show-3 projectbutton" href="#"><i class="fa fa-pencil"></i>Article</a>
@@ -64,7 +64,7 @@
         </ul>
       </div>
     </div>
-    <div class="copyrights">Template from web</div>
+    <div class="copyrights">value by huachuang</div>
     <div class="container" id="page-content">
       <div class="row">
 
@@ -82,7 +82,7 @@
             <div id="menu-1" class="homepage home-section text-center">
               <div class="welcome-text">
                 <h2>Hello, Welcome to <strong>SEE ME</strong>.——<span class="green">SunHuaChuang</span></h2>
-                <p>It is my <span class="orange">personal website</span> on github. you can get it in <span class="green"><a href="https://github.com/sunhuachuang/sunhuachuang.github.io">&nbsp;github</a></span>. And You can look around my open projects and articles in <a href="https://github.com/sunhuachuang">personal github</a>. I wish you will like it.</p>
+                <p>It is my <span class="orange">personal website</span> on github. you can get it in <span class="green"><a href="https://github.com/sunhuachuang/sunhuachuang.github.io">&nbsp;github</a></span>. And You can look around my open projects and articles in <a href="https://github.com/sunhuachuang">personal github</a>. I wish you will like it. My English is poor, so it is easy to kown what I said and what I want to said. hahaha...</p>
               </div>
             </div>
 
@@ -90,22 +90,29 @@
               <div class="row">
                 <div class="col-md-8 col-sm-8">
                   <div class="box-content profile">
-                    <h3 class="widget-title">Learn about us</h3>
+                    <h3 class="widget-title">Who Is Me</h3>
                     <div class="profile-thumb">
                       <img src="images/8.jpg" alt="">
                     </div>
                     <div class="profile-content">
-                      <h5 class="profile-name">Linda Beauty</h5>
-                      <span class="profile-role">Creative Director</span>
-                      <p>Most of the images are from <a rel="nofollow" href="#">Unsplash.com</a> website. Curabitur auctor justo pretium purus varius sagittis. Aliquam porttitor leo sapien, hendrerit dapibus lorem.<br><br>
-			Change icons by <a rel="nofollow" href="#/font-awesome-icon-world-map/">Font Awesome</a> (version 4). Example: <span class="blue">&lt;i class=&quot;fa fa-refresh&quot;&gt;&lt;/i&gt;</span></p>
+                      <h5 class="profile-name">Sun Huachuang (孙华闯)</h5>
+                      <span class="profile-role">web developer</span>
+                      <p>I have not think over what I will say in here.wait...
+                        </br></br></br></br></br></br>
+                        take the value
+                      </p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
                   <div class="box-content">
-                    <h3 class="widget-title">Background</h3>
-                    <p>Vestibulum pellentesque ante sit amet tristique hendrerit. Sed consequat, nunc lobortis faucibus pretium, enim nibh blandit est, nec sollicitudin est quam a neque. Aenean eget malesuada justo.</p>
+                    <h3 class="widget-title">Education</h3>
+                    <p>
+                    <p>when I was child</p>
+                    <p>When I was teen</p>
+                    <p>when I was yang</p>
+                    <p>Maybe I was old</p>
+                    </p>
                     <div class="about-social">
                       <ul>
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -121,39 +128,45 @@
               <div class="row">
                 <div class="col-md-5 col-sm-5">
                   <div class="box-content">
-                    <h3 class="widget-title">Our Studio</h3>
+                    <h3 class="widget-title">MY HOBBY</h3>
                     <div class="project-item">
                       <img src="images/7.jpg" alt="">
                       <div class="project-hover">
-                        <h4>Great Nature Capture</h4>
+                        <h4>so much, so strange, and that is me</h4>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-7 col-sm-7">
                   <div class="box-content">
-                    <h3 class="widget-title">Our Technical Skills</h3>
+                    <h3 class="widget-title">My Technical Skills</h3>
                     <ul class="progess-bars">
                       <li>
-                        <span>HTML CSS 80%</span>
+                        <span>Chinese Traditional Culture 99% (Boast)</span>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%;"></div>
+                        </div>
+                      </li>
+                      <li>
+                        <span>LAMP 80%</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                         </div>
                       </li>
                       <li>
-                        <span>PHOTOSHOP 95%</span>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
-                        </div>
-                      </li>
-                      <li>
-                        <span>WORDPRESS 70%</span>
+                        <span>JS HTML CSS 70%</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                         </div>
                       </li>
                       <li>
-                        <span>PHP mySQL 50%</span>
+                        <span>Android 50%</span>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+                        </div>
+                      </li>
+                      <li>
+                        <span>Rust and Go (growing)</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
                         </div>
@@ -232,7 +245,7 @@
               <div class="row">
                 <div class="col-md-8 col-sm-8">
                   <div class="box-content">
-                    <h3 class="widget-title">Send Us A Message</h3>
+                    <h3 class="widget-title">Send Me A Message</h3>
                     <form class="contact-form">
                       <fieldset>
                         <input type="text" class="name" id="name" placeholder="Name...">
@@ -280,7 +293,7 @@
                 <a class="show-1 active homebutton" href="#"><i class="fa fa-home"></i>Home</a>
               </li>
               <li>
-                <a class="show-2 aboutbutton" href="#"><i class="fa fa-user"></i>About Us</a>
+                <a class="show-2 aboutbutton" href="#"><i class="fa fa-user"></i>About Me</a>
               </li>
               <li>
                 <a class="show-3 projectbutton" href="#"><i class="fa fa-pencil"></i>Article</a>
