--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
   <body>
     <!--[if lt IE 7]>
