--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
                     <div class="project-item">
                       <img src="images/1.jpg" alt="">
                       <div class="project-hover">
-                        <h4>Great Nature Capture</h4>
+                        <h4>I love Chinese Traditional Culture</h4>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="project-item">
-                      <img src="images/2.jpg" alt="">
+                      <img src="images/2.png" alt="">
                       <div class="project-hover">
-                        <h4>Another Image Caption</h4>
+                        <h4>Symfony is my Main Tool</h4>
                       </div>
                     </div>
                   </div>
