--- a/index.html
+++ b/index.html
@@ -149,27 +149,27 @@
                         </div>
                       </li>
                       <li>
-                        <span>LAMP 80%</span>
+                        <span>LAMP 65%</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                          <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div>
                         </div>
                       </li>
                       <li>
-                        <span>JS HTML CSS 70%</span>
+                        <span>JS HTML CSS 60%</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
                         </div>
                       </li>
                       <li>
-                        <span>Android 50%</span>
+                        <span>Android 40%</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+                          <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
                         </div>
                       </li>
                       <li>
                         <span>Rust and Go (growing)</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+                          <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"></div>
                         </div>
                       </li>
                     </ul>
@@ -184,7 +184,8 @@
                 <div class="row">
                   <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="project-item">
-                      <img src="images/1.jpg" alt="">
+                      <a href="https://github.com/sunhuachuang/sun-blog/tree/master/think">
+                        <img src="images/1.jpg" alt=""></a>
                       <div class="project-hover">
                         <h4>I love Chinese Traditional Culture</h4>
                       </div>
@@ -192,7 +193,8 @@
                   </div>
                   <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="project-item">
-                      <img src="images/2.png" alt="">
+                      <a href="https://github.com/sunhuachuang/sun-blog/tree/master/program/symfony">
+                      <img src="images/2.png" alt=""></a>
                       <div class="project-hover">
                         <h4>Symfony is my Main Tool</h4>
                       </div>
@@ -200,9 +202,10 @@
                   </div>
                   <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="project-item">
-                      <img src="images/3.jpg" alt="">
+                      <a href="https://github.com/sunhuachuang/sun-blog/tree/master/program/react">
+                      <img src="images/3.jpg" alt=""></a>
                       <div class="project-hover">
-                        <h4>Great Nature Capture</h4>
+                        <h4>React and Redux is Amazing</h4>
                       </div>
                     </div>
                   </div>
@@ -210,7 +213,7 @@
                     <div class="project-item">
                       <img src="images/4.jpg" alt="">
                       <div class="project-hover">
-                        <h4>Another Image Caption</h4>
+                        <h4>Web Frontend is Unstopable</h4>
                       </div>
                     </div>
                   </div>
@@ -218,7 +221,7 @@
                     <div class="project-item">
                       <img src="images/5.jpg" alt="">
                       <div class="project-hover">
-                        <h4>Great Nature Capture</h4>
+                        <h4>Web Frontend is Unstopable</h4>
                       </div>
                     </div>
                   </div>
