--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="social-icons">
               <ul>
-                <li><a href="#" class="fa fa-facebook"></a></li>
-                <li><a href="#" class="fa fa-twitter"></a></li>
-                <li><a href="#" class="fa fa-linkedin"></a></li>
-                <li><a href="#" class="fa fa-dribbble"></a></li>
-                <li><a href="#" class="fa fa-rss"></a></li>
+                <li><a href="https://github.com/sunhuachuang" class="fa fa-github"></a></li>
+                <li><a href="http://weibo.com/u/3268988844?is_all=1" class="fa fa-weibo"></a></li>
+                <li><a href="https://www.linkedin.com/in/huachuang-sun-6548a3105" class="fa fa-linkedin"></a></li>
+                <li><a href="https://twitter.com/huachuang20" class="fa fa-twitter"></a></li>
               </ul>
             </div>
           </div>
@@ -68,18 +67,12 @@
     <div class="copyrights">value by huachuang</div>
     <div class="container" id="page-content">
       <div class="row">
-
-
-
         <div class="col-md-9 col-sm-12 content-holder">
           <!-- CONTENT -->
           <div id="menu-container">
-
             <div class="logo-holder logo-top-margin">
               <a href="#" class="site-brand"><img src="images/logo.png" alt=""></a>
             </div>
-
-
             <div id="menu-1" class="homepage home-section text-center">
               <div class="welcome-text">
                 <h2>Hello, Welcome to <strong>SEE ME</strong>.——<span class="green">SunHuaChuang</span></h2>
@@ -116,11 +109,10 @@
                     </p>
                     <div class="about-social">
                       <ul>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-linkedin"></a></li>
-                        <li><a href="#" class="fa fa-dribbble"></a></li>
-                      </ul>
+                        <li><a href="https://github.com/sunhuachuang" class="fa fa-github"></a></li>
+                        <li><a href="http://weibo.com/u/3268988844?is_all=1" class="fa fa-weibo"></a></li>
+                        <li><a href="https://www.linkedin.com/in/huachuang-sun-6548a3105" class="fa fa-linkedin"></a></li>
+                        <li><a href="https://twitter.com/huachuang20" class="fa fa-twitter"></a></li></ul>
                     </div>
                   </div>
                 </div>
@@ -250,15 +242,15 @@
                 <div class="col-md-8 col-sm-8">
                   <div class="box-content">
                     <h3 class="widget-title">Send Me A Message</h3>
-                    <form class="contact-form">
+                    <form class="contact-form" action="http://contactsun.applinzi.com/contact.php" method="post">
                       <fieldset>
-                        <input type="text" class="name" id="name" placeholder="Name...">
+                        <input type="text" name="username" class="name" id="name" placeholder="Name...">
                       </fieldset>
                       <fieldset>
-                        <input type="email" class="email" id="email" placeholder="Email...">
+                        <input type="email" name="email" class="email" id="email" placeholder="Email...">
                       </fieldset>
                       <fieldset>
-                        <input type="text" class="subject" id="subject" placeholder="Subject...">
+                        <input type="text" name="subject" class="subject" id="subject" placeholder="Subject...">
                       </fieldset>
                       <fieldset>
                         <textarea name="message" id="message" cols="30" rows="4" placeholder="Message.."></textarea>
@@ -276,11 +268,10 @@
 		      Suspendisse ornare sollicitudin lectus non egestas. Nam fermentum imperdiet ligula congue venenatis. </p>
                     <div class="about-social">
                       <ul>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-linkedin"></a></li>
-                        <li><a href="#" class="fa fa-dribbble"></a></li>
-                      </ul>
+                        <li><a href="https://github.com/sunhuachuang" class="fa fa-github"></a></li>
+                        <li><a href="http://weibo.com/u/3268988844?is_all=1" class="fa fa-weibo"></a></li>
+                        <li><a href="https://www.linkedin.com/in/huachuang-sun-6548a3105" class="fa fa-linkedin"></a></li>
+                        <li><a href="https://twitter.com/huachuang20" class="fa fa-twitter"></a></li></ul>
                     </div>
                   </div>
                 </div>
