--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       <span class="profile-role">web developer</span>
                       <p>I have not think over what I will say in here.wait...
                         </br></br></br></br></br></br>
-                        take the value
+                        Thinks for reading.
                       </p>
                     </div>
                   </div>
@@ -102,10 +102,10 @@
                   <div class="box-content">
                     <h3 class="widget-title">Education</h3>
                     <p>
-                    <p>when I was child</p>
-                    <p>When I was teen</p>
-                    <p>when I was yang</p>
-                    <p>Maybe I was old</p>
+                    <p>when I was child, I want to greatful.</p>
+                    <p>When I was teen, I want to the second Albert Einstein.</p>
+                    <p>when I was yang, I step up to programming.</p>
+                    <p>Maybe I was old, I was alive.</p>
                     </p>
                     <div class="about-social">
                       <ul>
@@ -117,7 +117,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="row">
                 <div class="col-md-5 col-sm-5">
                   <div class="box-content">
@@ -141,7 +140,7 @@
                         </div>
                       </li>
                       <li>
-                        <span>LAMP 65%</span>
+                        <span>Linux & php 70%</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div>
                         </div>
@@ -153,7 +152,7 @@
                         </div>
                       </li>
                       <li>
-                        <span>Android 40%</span>
+                        <span>python 60%</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
                         </div>
@@ -211,9 +210,10 @@
                   </div>
                   <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="project-item">
-                      <img src="images/5.jpg" alt="">
+                      <a href="https://github.com/sunhuachuang/auto-data">
+                      <img src="images/5.jpg" alt=""></a>
                       <div class="project-hover">
-                        <h4>Web Frontend is Unstopable</h4>
+                        <h4>Project: auto-data</h4>
                       </div>
                     </div>
                   </div>
@@ -221,7 +221,7 @@
                     <div class="project-item">
                       <img src="images/6.jpg" alt="">
                       <div class="project-hover">
-                        <h4>Another Image Caption</h4>
+                        <h4>Only take a place</h4>
                       </div>
                     </div>
                   </div>
@@ -316,6 +316,5 @@
     <script src="js/vendor/jquery-1.10.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <!-- templatemo 439 rectangle -->
   </body>
 </html>
