--- a/base.html
+++ b/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="sunhuachuang huachuang20 homepage blog programmer programming python php ruby rails symfony flask emacs 孙华闯的 个人博客 技术文章 思想感悟">
+    <meta name="description" content="sunhuachuang huachuang20 homepage blog 孙华闯的 个人博客 技术文章">
     <meta name="author" content="sunhuachuang">
     <link rel="icon" href="/images/favicon.ico">
     <title>Sunhuachuang Blog</title>
@@ -16,23 +16,11 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
+      <a href="index.html"><h3>Back To Blog Index</h3></a>
       <div class="row">
         <div class="col-sm-8">
-          <ul>
 
-            <li class="lead">
-              <a href="#"><strong class="text-info">This is First Blog Title</strong></a><small style="float:right;"><em>2017-3-12</em></small>
-            </li>
-
-          </ul>
-          <nav>
-            <ul class="pager">
-              <li style="float:left;padding-left:2em;"><a href="#">Previous</a></li>
-              <li style="float:right;padding-right:2em;"><a href="#">Next</a></li>
-            </ul>
-          </nav>
         </div>
-
         <div class="col-sm-3 col-sm-offset-1">
           <div>
             <h4>About Me</h4>
@@ -43,13 +31,9 @@
           <div>
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="2018.html">2018 (0)</a></li>
-              <li><a href="2017.html">2017 (0)</a></li>
-              <li><a href="2016.html">2016 (5)</a></li>
-            </ol>
-            <ol class="list-unstyled">
-              <li><a href="python/index.html">python (5)</a></li>
-              <li><a href="php/index.html">php (2)</a></li>
+              <li><a href="2018.html">2018</a></li>
+              <li><a href="2017.html">2017</a></li>
+              <li><a href="2016.html">2016</a></li>
             </ol>
           </div>
           <hr>
