--- a/about_zh.html
+++ b/about_zh.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="sunhuachuang huachuang20 homepage blog 孙华闯的 个人博客 技术文章">
+    <meta name="description" content="sunhuachuang huachuang20 homepage blog">
     <meta name="author" content="sunhuachuang">
     <link rel="icon" href="/images/favicon.ico">
     <title>Sunhuachuang Blog</title>
