--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="sunhuachuang huachuang20 homepage blog programmer programming python php ruby rails symfony flask emacs 孙华闯的 个人博客 技术文章 思想感悟">
+    <meta name="description" content="sunhuachuang huachuang20 homepage blog programmer programming python php ruby rails symfony flask emacs 孙华闯 个人博客 技术文章 思想感悟">
     <meta name="author" content="sunhuachuang">
     <link rel="icon" href="/images/favicon.ico">
     <title>Sunhuachuang Blog</title>
