--- a/index.html
+++ b/index.html
@@ -19,9 +19,20 @@
       <div class="row">
         <div class="col-sm-8">
           <ul>
-
             <li class="lead">
-              <a href="#"><strong class="text-info">This is First Blog Title</strong></a><small style="float:right;"><em>2017-3-12</em></small>
+              <a href="python/flask-dir.html"><strong class="text-info">flask项目的结构浅议</strong></a><small style="float:right;"><em>2016</em></small>
+            </li>
+            <li class="lead">
+              <a href="js/redux-example-analysis.html"><strong class="text-info">对redux的几个案例的简单分析</strong></a><small style="float:right;"><em>2016</em></small>
+            </li>
+            <li class="lead">
+              <a href="php/module-already-load.html"><strong class="text-info">PHP Warning: Module 'xxx' already loaded in Unknown on line 0</strong></a><small style="float:right;"><em>2016</em></small>
+            </li>
+            <li class="lead">
+              <a href="php/listener-before-or-after-operational-database-mysql.html"><strong class="text-info">在操作数据库前监听doctrine事件</strong></a><small style="float:right;"><em>2016</em></small>
+            </li>
+            <li class="lead">
+              <a href="php/restful-api-login-register-fosuerbundle-symfony3-guard.html"><strong class="text-info">restful api for fosuserbundle in symfony3. (by guard)</strong></a><small style="float:right;"><em>2016</em></small>
             </li>
 
           </ul>
@@ -48,8 +59,9 @@
               <li><a href="2016.html">2016 (5)</a></li>
             </ol>
             <ol class="list-unstyled">
-              <li><a href="python/index.html">python (5)</a></li>
-              <li><a href="php/index.html">php (2)</a></li>
+              <li><a href="python/index.html">python (1)</a></li>
+              <li><a href="php/index.html">php (3)</a></li>
+              <li><a href="php/index.html">js (1)</a></li>
             </ol>
           </div>
           <hr>
