--- a/base.html
+++ b/base.html
@@ -16,7 +16,8 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
-      <a href="index.html"><h3>Back To Blog Index</h3></a>
+      <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <hr>
       <div class="row">
         <div class="col-sm-8">
 
@@ -25,15 +26,15 @@
           <div>
             <h4>About Me</h4>
             <p>Name: <em>sunhuachuang (孙华闯)</em></p>
-            <p><a href="about_en.html">English Introduction</a> <a href="about_zh.html">中文简介</a></p>
+            <p><a href="/about_en.html">English Introduction</a> <a href="/about_zh.html">中文简介</a></p>
           </div>
           <hr>
           <div>
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="2018.html">2018</a></li>
-              <li><a href="2017.html">2017</a></li>
-              <li><a href="2016.html">2016</a></li>
+              <li><a href="/2018.html">2018</a></li>
+              <li><a href="/2017.html">2017</a></li>
+              <li><a href="/2016.html">2016</a></li>
             </ol>
           </div>
           <hr>
