--- a/index.html
+++ b/index.html
@@ -18,24 +18,11 @@
       <hr>
       <div class="row">
         <div class="col-sm-8">
-          <ul>
-            <li class="lead">
-              <a href="python/flask-dir.html"><strong class="text-info">flask项目的结构浅议</strong></a><small style="float:right;"><em>2016</em></small>
-            </li>
-            <li class="lead">
-              <a href="js/redux-example-analysis.html"><strong class="text-info">对redux的几个案例的简单分析</strong></a><small style="float:right;"><em>2016</em></small>
-            </li>
-            <li class="lead">
-              <a href="php/module-already-load.html"><strong class="text-info">PHP Warning: Module 'xxx' already loaded in Unknown on line 0</strong></a><small style="float:right;"><em>2016</em></small>
-            </li>
-            <li class="lead">
-              <a href="php/listener-before-or-after-operational-database-mysql.html"><strong class="text-info">在操作数据库前监听doctrine事件</strong></a><small style="float:right;"><em>2016</em></small>
-            </li>
-            <li class="lead">
-              <a href="php/restful-api-login-register-fosuerbundle-symfony3-guard.html"><strong class="text-info">restful api for fosuserbundle in symfony3. (by guard)</strong></a><small style="float:right;"><em>2016</em></small>
-            </li>
-
-          </ul>
+          <h4><a href="/python/flask-dir.html">flask项目的结构浅议</a><small style="float:right;"><em>2016</em></small></h4>
+          <h4><a href="/js/redux-example-analysis.html">对redux的几个案例的简单分析</a><small style="float:right;"><em>2016</em></small></h4>
+          <h4><a href="/php/module-already-load.html">PHP Warning: Module 'xxx' already loaded in Unknown on line 0</a><small style="float:right;"><em>2016</em></small></h4>
+          <h4><a href="/php/listener-before-or-after-operational-database-mysql.html">在操作数据库前监听doctrine事件</a><small style="float:right;"><em>2016</em></small></h4>
+          <h4><a href="/php/restful-api-login-register-fosuerbundle-symfony3-guard.html">restful api for fosuserbundle in symfony3. (by guard)</a><small style="float:right;"><em>2016</em></small></h4>
           <nav>
             <ul class="pager">
               <li style="float:left;padding-left:2em;"><a href="#">Previous</a></li>
@@ -61,7 +48,7 @@
             <ol class="list-unstyled">
               <li><a href="python/index.html">python (1)</a></li>
               <li><a href="php/index.html">php (3)</a></li>
-              <li><a href="php/index.html">js (1)</a></li>
+              <li><a href="js/index.html">js (1)</a></li>
             </ol>
           </div>
           <hr>
