--- a/js/index.html
+++ b/js/index.html
@@ -20,9 +20,7 @@
       <hr>
       <div class="row">
         <div class="col-sm-8">
-          <li class="lead">
-            <a href="/js/redux-example-analysis.html"><strong class="text-info">对redux的几个案例的简单分析</strong></a><small style="float:right;"><em>2016</em></small>
-          </li>
+          <h4><a href="/js/redux-example-analysis.html">对redux的几个案例的简单分析</a><small style="float:right;"><em>2016</em></small></h4>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
