--- a/php/index.html
+++ b/php/index.html
@@ -20,15 +20,9 @@
       <hr>
       <div class="row">
         <div class="col-sm-8">
-          <li class="lead">
-            <a href="/php/module-already-load.html"><strong class="text-info">PHP Warning: Module 'xxx' already loaded in Unknown on line 0</strong></a><small style="float:right;"><em>2016</em></small>
-          </li>
-          <li class="lead">
-            <a href="/php/listener-before-or-after-operational-database-mysql.html"><strong class="text-info">add listener before opeate mysql（在操作数据库前监听doctrine事件）</strong></a><small style="float:right;"><em>2016</em></small>
-          </li>
-          <li class="lead">
-            <a href="/php/restful-api-login-register-fosuerbundle-symfony3-guard.html"><strong class="text-info">restful api for login and register when use fosuserbundle in symfony3. (by guard)</strong></a><small style="float:right;"><em>2016</em></small>
-          </li>
+          <h4><a href="/php/module-already-load.html">PHP Warning: Module 'xxx' already loaded in Unknown on line 0</a><small style="float:right;"><em>2016</em></small></h4>
+          <h4><a href="/php/listener-before-or-after-operational-database-mysql.html">在操作数据库前监听doctrine事件</a><small style="float:right;"><em>2016</em></small></h4>
+          <h4><a href="/php/restful-api-login-register-fosuerbundle-symfony3-guard.html">restful api for fosuserbundle in symfony3. (by guard)</a><small style="float:right;"><em>2016</em></small></h4>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
