--- a/python/index.html
+++ b/python/index.html
@@ -20,9 +20,7 @@
       <hr>
       <div class="row">
         <div class="col-sm-8">
-          <li class="lead">
-            <a href="/python/flask-dir.html"><strong class="text-info">flask项目的结构浅议</strong></a><small style="float:right;"><em>2016</em></small>
-          </li>
+          <h4><a href="/python/flask-dir.html">flask项目的结构浅议</a><small style="float:right;"><em>2016</em></small></h4>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
