--- a/base.html
+++ b/base.html
@@ -17,6 +17,7 @@
       </div>
       <hr>
       <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <h3 class="text-primary"><b></b></h3>
       <hr>
       <div class="row">
         <div class="col-sm-8">
