--- a/2018.html
+++ b/2018.html
@@ -32,8 +32,8 @@
           <div>
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="2018.html">2018 (0)</a></li>
-              <li><a href="2017.html">2017 (0)</a></li>
+              <li><a href="2018.html">2018</a></li>
+              <li><a href="2017.html">2017</a></li>
               <li><a href="2016.html">2016 (5)</a></li>
             </ol>
           </div>
