--- a/php/listener-before-or-after-operational-database-mysql.html
+++ b/php/listener-before-or-after-operational-database-mysql.html
@@ -55,6 +55,12 @@ service:
           <p>that is enough...</p>
           <p>there is also have some listener <a href="http://doctrine-orm.readthedocs.org/projects/doctrine-orm/en/latest/reference/events.html">doctrine listener</a>  </p>
           <p>only change preflush for what you want.</p>
+          <nav>
+            <ul class="pager">
+              <li style="float:left;padding-left:2em;"><a href="/php/module-already-load.html"><< PHP module warning</a></li>
+              <li style="float:right;padding-right:2em;"><a href="/php/restful-api-login-register-fosuerbundle-symfony3-guard.html">restful symfony >></a></li>
+            </ul>
+          </nav>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
@@ -84,6 +90,7 @@ service:
           </div>
         </div>
       </div>
+      <hr>
     </div>
   </body>
 </html>
