--- a/php/restful-api-login-register-fosuerbundle-symfony3-guard.html
+++ b/php/restful-api-login-register-fosuerbundle-symfony3-guard.html
@@ -23,6 +23,11 @@
         <div class="col-sm-8">
           <h4>restful api for login and register when use fosuserbundle in symfony3. (by guard)</h4>
           <p><a href="https://github.com/sunhuachuang/projects-demo/tree/master/symfony-restful-fosuserbundle">click to see demo code.</a></p>
+          <nav>
+            <ul class="pager">
+              <li style="float:left;padding-left:2em;"><a href="/php/listener-before-or-after-operational-database-mysql.html"><< 监听doctrine事件</a></li>
+            </ul>
+          </nav>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
@@ -52,6 +57,7 @@
           </div>
         </div>
       </div>
+      <hr>
     </div>
   </body>
 </html>
