--- a/python/flask-dir.html
+++ b/python/flask-dir.html
@@ -118,6 +118,12 @@ test-demo
             <li><strong>templates</strong> jinja模板文件。</li>
             <li><strong>utils</strong> 一些常用的方法集合。</li>
           </ol>
+          <nav>
+            <ul class="pager">
+              <li style="float:left;padding-left:2em;"><a href="#"><< </a></li>
+              <li style="float:right;padding-right:2em;"><a href="/js/redux-example-analysis.html">redux 案例分析 >></a></li>
+            </ul>
+          </nav>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
@@ -147,6 +153,7 @@ test-demo
           </div>
         </div>
       </div>
+      <hr>
     </div>
   </body>
 </html>
