--- a/php/module-already-load.html
+++ b/php/module-already-load.html
@@ -27,10 +27,16 @@
             <li>go to php.ini and comment the like:</li>
             <code>;extension=memcache.so</code>
             <li>if you cannot find xxx.so in php.ini. maybe it in
-            <code>/etc/php/mods-available/</code>
-            It is happend when you add other extension to already php.
+              <code>/etc/php/mods-available/</code>
+              It is happend when you add other extension to already php.
             </li>
           </ol>
+          <nav>
+            <ul class="pager">
+              <li style="float:left;padding-left:2em;"><a href="/js/redux-example-analysis.html"><< redux 案例分析</a></li>
+              <li style="float:right;padding-right:2em;"><a href="/php/listener-before-or-after-operational-database-mysql.html">监听doctrine事件 >></a></li>
+            </ul>
+          </nav>
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           <div>
@@ -60,6 +66,7 @@
           </div>
         </div>
       </div>
+      <hr>
     </div>
   </body>
 </html>
