--- a/python/flask-dir.html
+++ b/python/flask-dir.html
@@ -16,7 +16,7 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
-      <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <a href="/index.html" class="btn btn-success"><< Blog Index</a>
       <h3 class="text-primary"><b>flask项目的结构浅议</b></h3>
       <hr>
       <div class="row">
