--- a/about_zh.html
+++ b/about_zh.html
@@ -16,7 +16,7 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
-      <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <a href="/index.html" class="btn btn-success"><< Blog Index</a>
       <hr>
       <div class="row">
         <div class="col-sm-8">
