--- a/js/redux-example-analysis.html
+++ b/js/redux-example-analysis.html
@@ -16,7 +16,7 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
-      <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <a href="/index.html" class="btn btn-success"><< Blog Index</a>
       <h3 class="text-primary"><b>对于redux的几个例子的分析</b></h3>
       <hr>
       <div class="row">
