--- a/php/module-already-load.html
+++ b/php/module-already-load.html
@@ -16,7 +16,7 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
-      <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <a href="/index.html" class="btn btn-success"><< Blog Index</a>
       <h3 class="text-primary"><b>PHP Warning: Module 'xxx' already loaded in Unknown on line 0</b></h3>
       <hr>
       <div class="row">
