--- a/php/restful-api-login-register-fosuerbundle-symfony3-guard.html
+++ b/php/restful-api-login-register-fosuerbundle-symfony3-guard.html
@@ -16,7 +16,7 @@
         <h2 class="text-success">Happy Hacking Sun. Happy Everyone !</h2>
       </div>
       <hr>
-      <a href="/index.html" class="btn btn-success"><- Blog Index</a>
+      <a href="/index.html" class="btn btn-success"><< Blog Index</a>
       <h3 class="text-primary"><b>restful api for fosuserbundle in symfony3. (by guard)</b></h3>
       <hr>
       <div class="row">
