--- a/php/listener-before-or-after-operational-database-mysql.html
+++ b/php/listener-before-or-after-operational-database-mysql.html
@@ -67,6 +67,7 @@ service:
             <h4>About Me</h4>
             <p>Name: <em>sunhuachuang (孙华闯)</em></p>
             <p><a href="/about_en.html">English Introduction</a> <a href="/about_zh.html">中文简介</a></p>
+            <p><a href="https://github.com/sunhuachuang/sunhuachuang.github.io/issues">交流讨论请至 issue</a></p>
           </div>
           <hr>
           <div>
